<resources>
    <string name="app_name">TnPC</string>
    <string name="tpo">TPO</string>
    <string name="Company">Company</string>
    <string name="Student">Student</string>
    <string name="tnpc_coordinators">tnpc Coordinators</string>
    <string name="form_name">Training and Placement Cell, DBATU</string>
    <string name="info">Fill in the form for the placement opportunities</string>
    <string name="spinner_title">Choose</string>
    <string name="compulsory">* Compulsory</string>
    <string name="personal_details">Personal Details</string>
    <string name="first_name">First Name *</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name *</string>
    <string name="gender">Gender *</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="contact_number">Contact Number *</string>
    <string name="email">Email *</string>
    <string name="address">Address *</string>
    <string name="your_admission_type">Your Admission type *</string>
    <string name="first_year_admission">First Year Admission</string>
    <string name="diploma_admission">Diploma Admission</string>
    <string name="department">Department *</string>
    <string name="roll_number">Roll Number *</string>
    <string name="ssc_percentage">SSC Percentage *</string>
    <string name="hsc_percentage">HSC Percentage *</string>
    <string name="diploma_percentage">Diploma Percentage *</string>
    <string name="_1st_semester_sgpa">1st Semester SGPA *</string>
    <string name="_2nd_semester_sgpa">2nd Semester SGPA *</string>
    <string name="_3rd_semester_sgpa">3rd Semester SGPA *</string>
    <string name="_4th_semester_sgpa">4th Semester SGPA *</string>
    <string name="_5th_semester_sgpa">5th Semester SGPA *</string>
    <string name="_6th_semester_sgpa">6th Semester SGPA *</string>
    <string name="number_of_active_backlogs">Number of active backlogs *</string>
    <string name="are_you_interested_in_higher_studies">Are you Interested in Higher studies? *</string>
    <string name="e_g_m_tech_ms_mba_etc">(e.g. M.Tech, MS, MBA, etc)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exams">Exams</string>
    <string name="which_of_the_following_exams_will_you_appear_for">Which of the following exams will you appear for? *</string>
    <string name="gate">GATE</string>
    <string name="gre_toefl">GRE, TOEFL</string>
    <string name="cat_mba_cet">CAT, MBA-CET</string>
    <string name="other">OTHER</string>
    <string name="mpsc_upsc">MPSC, UPSC</string>
    <string name="submit">Submit</string>
    <string name="specify">Specify *</string>
    <string name="cmat">CMAT</string>
    <string name="gmat">GMAT</string>
    <string name="profile">profile</string>
    <string name="nextSlide">Next</string>
    <string-array name="dept_array">
        <item>--- Select Department ---</item>
        <item>Chemical</item>
        <item>Civil</item>
        <item>Computer</item>
        <item>Electrical</item>
        <item>ExTC</item>
        <item>IT</item>
        <item>Mechanical</item>
        <item>Petrochemical</item>
    </string-array>
    <string-array name="back_log">
        <item>number of active backlogs</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>more..</item>
    </string-array>

    <string name="next1">NEXT</string>
    <string name="skipIntro">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">News</string>
    <string name="slide_1_desc">The easiest way to get news about the Campus Recruitment</string>

    <string name="slide_2_title">Notify</string>
    <string name="slide_2_desc">Get Notifications about the workshops and seminars in our University</string>
    <string name="news_feed_logo">News feed logo</string>
    <string name="notification_logo">Notification Logo</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="login">Login</string>
    <string name="Rno">Roll number</string>
    <string name="college_logo">College logo</string>
    <string name="click_here_to_register">Click here to Register</string>
    <string name="new_1">New ?</string>
    <string name="sign_out">Sign Out</string>
    <string name="action_news">action_news</string>
    <string name="action_add">add</string>
    <string name="student_info">Student Info / Add Coordinator</string>
    <string name="add_company">Add Company</string>
    <string name="send_notice">Send Notice</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
    <string name="registration_form">Registration Form</string>
    <string name="already_registered">already registered?</string>
    <string name="click_here_to_login">click here to login</string>
    <string name="search">Search</string>
    <string name="news_feed">News Feed</string>
    <string name="company_name">Company Name *</string>
    <string name="company_hr">Company HR *</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="company_info">Company Info</string>
    <string name="notice_board">Notice Board</string>
    <string name="no_updates_yet">No Updates Yet</string>
    <string name="no_companies_added_yet">No Companies added yet</string>
    <string name="full_name">Full Name</string>
    <string name="gender_m">Gender</string>
    <string name="date_of_birth_i">Date of Birth</string>
    <string name="contact_num">Contact Number</string>
    <string name="email_i">Email</string>
    <string name="address_i">Address</string>
    <string name="admission_type">Admission Type</string>
    <string name="academic_details">Academic Details</string>
    <string name="department_i">Department</string>
    <string name="roll_number_i">Roll Number</string>
    <string name="ssc_percentage_i">SSC Percentage</string>
    <string name="hsc_percentage_i">HSC Percentage</string>
    <string name="diploma_percentage_i">Diploma Percentage</string>
    <string name="_1st_semester_sgpa_i">1st Semester SGPA</string>
    <string name="_2nd_semester_sgpa_i">2nd Semester SGPA</string>
    <string name="_3rd_semester_sgpa_i">3rd Semester SGPA</string>
    <string name="_4th_semester_sgpa_i">4th Semester SGPA</string>
    <string name="_5th_semester_sgpa_i">5th Semester SGPA</string>
    <string name="_6th_semester_sgpa_i">6th Semester SGPA</string>
    <string name="active_backlog">Active Backlog</string>
    <string name="update">Update</string>
    <string name="appearing_for_exams">Appearing for Exams</string>
    <string name="company_details">Company Details</string>
    <string name="companyname">Company Name</string>
    <string name="company_hr_i">Company HR</string>
    <string name="edit">Edit</string>
    <string name="full_name_r">Full Name *</string>
    <string name="add_coordinator">Add Coordinator</string>
    <string name="student_info_update_info">Student Info / Update Info</string>

    <string-array name="authority">
        <item>Student</item>
        <item>TnPC Coordinator</item>
        <item>TPO</item>
    </string-array>


</resources>
