<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dbatu.dbatu_tnpc.CompanyDetails">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:titleTextColor="@color/colorPrimary"
        android:titleTextColor="@color/colorPrimary"
        android:elevation="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:targetApi="m" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_details"
        android:textSize="28sp"
        android:textColor="#fff"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:layout_marginTop="16dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/companyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/companyname"
                android:inputType="textPersonName|textCapCharacters"
                android:maxLines="1"
                android:textAllCaps="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/companyHR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_hr_i"
                android:inputType="textPersonName|textCapCharacters"
                android:maxLines="1"
                android:textAllCaps="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/companyContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_num"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="13"
                android:textAllCaps="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/companyEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_i"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textAllCaps="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/companyAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_i"
                android:lines="3"
                android:gravity="start"
                android:inputType="text|textCapCharacters|textMultiLine"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/edit"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/updateInfo"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/update"
        android:textColor="@color/colorAccent"/>

</LinearLayout>